tests/functional/lang/eval-fail/fromJSON-keyWithNullByte.err.exp
error:
       … while calling the 'fromJSON' builtin
         at /pwd/lang/eval-fail/fromJSON-keyWithNullByte.nix:1:1:
            1| builtins.fromJSON ''{"a\u0000b": 1}''
             | ^
            2|

       error: input string 'a␀b' cannot be represented as Nix string because it contains null bytes
